@@ -4,9 +4,9 @@ NSD RELEASE NOTES
 ================
 
 BUG FIXES:
+	- Bugfix #487: lookup3.c determine endianness for BSD systems.
 	- Fix outgoing-interface: Don't fail if family is IPv6 but
 	  only IPv4 outgoing-interface is set, or vice versa.
-
 
 
 3.2.15
