@@ -1,3 +1,6 @@
+7 February 2013: Matthijs
+	- detect endianness in lookup3 on BSD, patch from Brad Smith.
+
 6 February 2013: Matthijs
 	- Fix outgoing-interface: Don't fail if family is IPv6 but
 	  only IPv4 outgoing-interface is set, or vice versa.
